1.15.1 /
[Alexandr Topilski]
- CONFIG GET databases
- Runtime SSH password
- [LevelDB] Compression options
- [RocksDB] Compression options

1.15.0 / January 10, 2018
[Alexandr Topilski]
- Save/Restore MainWindow position
- Save Json fixes
- [RocksDB] added support columns(database)

1.14.3 / January 2, 2018
[Alexandr Topilski]
- How to use dialog
- Bug fixes

1.14.2 / December 30, 2017
[Alexandr Topilski]
- #80 can't connect using ssh
- rebloom commands support

1.14.1 / December 21, 2017
[Alexandr Topilski]
- [Redis] SSH input checks
- Text view combobox
- Retina display support

1.14.0 / December 14, 2017
[Alexandr Topilski]
- Verify private user password
- UI fixes
- Is public version now trial

1.13.1 / December 5, 2017
[Alexandr Topilski]
- Check update fixes
- [ForestDB] by default in off state, possible builds from sources or in individual build request
- [RocksDB] by default in off state, possible builds from sources or in individual build request

1.13.0 / December 5, 2017
[Alexandr Topilski]
- [Redis] XADD command UI handling
- [Redis] XRANGE command UI handling
- [Redis] Support streams type
- Keys displaying strategy
- Clone connection functionality
- Fixed history workflow
- XML viewer

1.12.0 / November 26, 2017
[Alexandr Topilski]
- Fixed download links
- Validate json
- [UpscaleDB] by default in off state, possible builds from sources or in individual build request

1.11.0 / November 22, 2017
[Alexandr Topilski]
- EULA dialog
- Json keys validation
- [Redis] Full support JSON.GET/JSON.SET commands
- [Redis] Basic support RediSearch, redis-graph types 
- [Redis] MGET command UI handling
- [Redis] PEXPIRE command UI handling
- [Redis] PTTL command UI handling
- [Redis] MSET command UI handling
- [Redis] MSETNX command UI handling
- [ForestDB] db size stat
- [Unqlite] db size stat

1.10.0 / November 4, 2017
[Alexandr Topilski]
- Validate server commands
- Commands complex value
- Hex editor save value

1.9.10 / October 28, 2017
[Alexandr Topilski]